[tool.poetry]
name = "ds_alg"
version = "0.1.0"
description = ""
authors = ["genejiang2012 <genejiang2012@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pytest = "^6.2.2"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
